# claude-dj

./: .gitignore  .mcp.json  AGENTS.md  IMPLEMENTATION_PLAN.md  README.md  TECHNICAL_TRACK.md  main.py  opencode.json  pyproject.toml  redis.py
.claude/: settings.local.json
recommendation_engine/: .env.example  .gitignore  README.md  authorize_and_save.py  pyproject.toml
recommendation_engine/contracts/: engine_contracts.md
recommendation_engine/data/fixtures/: embeddings.jsonl  tracks_enriched.json  tracks_raw.json
recommendation_engine/scripts/: make_fixtures.py
recommendation_engine/src/recommendation_engine/: __init__.py  config.py  contracts.py  embed_clap.py  enrich_deezer.py  recommend.py  redis_raw.py  scrape_spotify.py  store_redis.py
recommendation_engine/src/recommendation_engine/import_history/: __init__.py  __main__.py  importer.py  provider.py  spotify_provider.py
recommendation_engine/tests/: test_contracts.py  test_embed.py  test_enrich.py  test_import_history.py  test_recommend.py  test_scrape.py  test_store.py
src/backend/: .env.example  main.py  preview.py  pyproject.toml  reaction.py  reactor.py  store.py  test_face.py  test_fer.py  webcam.py
src/backend/.claude/: settings.local.json
src/backend/claude_dj/: __init__.py  __main__.py  main.py  mascot.py  observability.py  smoke.py  transition.py
src/backend/claude_dj/agent/: __init__.py  client.py  runner.py
src/backend/tests/: conftest.py  test_agent_client.py  test_agent_runner.py  test_api.py  test_context_collapse.py  test_emotion_pipeline.py  test_initial_seed.py  test_landmark_expression.py  test_live_agentic_pipeline.py  test_main.py  test_mascot.py  test_mcp_server.py  test_narration.py  test_observability.py  test_playback_flow.py  test_reaction.py  test_reaction_monitor.py  test_reaction_scoring.py  test_reactor.py  test_reactor_reaction_source.py  test_recommendation_bridge.py  test_sentry_report.py  test_smoke.py  test_spotify.py  test_spotify_devices.py  test_vibe.py  test_vibedj_hud.py  test_webcam_emotions.py
src/backend/vibe_dj/: __main__.py  beats.py  config.py  emotion.py  face.py  player.py  vibe.py
(+82 files in other folders)
