[project]
name = "recommendation-engine"
version = "0.1.0"
description = "ClaudeDJ emotion-aware recommendation engine: Deezer previews -> CLAP embeddings -> Redis vector search."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "soundfile>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recommendation_engine"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
