[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend stub for ClaudeDJ"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
    "opencv-python>=4.10.0",
    "mediapipe>=0.10.35",
    "numpy>=1.26.0",
    "redis>=5.0.0",
    "deepface>=0.0.93",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "Pillow>=10.0.0",
]
