[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend stub for ClaudeDJ"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "fastapi>=0.138.0",
    "python-dotenv>=1.2.0",
    "sentry-sdk[fastapi]>=2.35.0",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
claude-dj = "claude_dj.main:main"
claude-dj-demo = "claude_dj.smoke:main"
claude-dj-smoke = "claude_dj.smoke:main"
