[project]
name = "backend"
version = "0.1.0"
description = "Autonomous ClaudeDJ backend harness"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "numpy>=2.4.6",
    "python-dotenv>=1.2.0",
    "redis>=8.0.0",
    "sentry-sdk>=2.35.0",
]

[project.optional-dependencies]
reactions = [
    "deepface>=0.0.93",
    "mediapipe>=0.10.35",
    "opencv-python>=4.10.0",
]

[project.scripts]
claude-dj = "claude_dj.main:main"
claude-dj-demo = "claude_dj.smoke:main"
claude-dj-smoke = "claude_dj.smoke:main"
